# homework_12_fastapi_auth

./: .env  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: env.py
migrations/versions/: cc3047ff87f0_email_confirm.py  f5d6519711c1_init.py
postgres-data/: postmaster.pid
postgres-data/base/13481/: 1247  1249  1259  16389  16392  16394  16405  16407  16415  16416  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  pg_internal.init
postgres-data/global/: 1260  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  global.stat
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_route_contacts.py  test_unit_repository_contacts.py  test_unit_repository_users.py
