[tool.poetry]
name = "hmw-12-api-auth"
version = "0.1.0"
description = ""
authors = ["LuytensStar <artem05zhar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.30"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
fastapi-mail = "^1.4.1"
fastapi-limiter = "^0.1.6"
pydantic-settings = "^2.2.1"
cloudinary = "^1.40.0"
sphinx = "^7.3.7"
pytest = "^8.2.0"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
